--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ django-allauth==65.3.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
-djangorestframework-simplejwt==5.4.0
+djangorestframework_simplejwt==5.4.0
 drf-yasg==1.21.8
+exceptiongroup==1.2.2
 Faker==33.1.0
 filelock==3.16.1
 idna==3.10
 inflection==0.5.1
+iniconfig==2.0.0
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
@@ -31,6 +33,8 @@ psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 pyproject-api==1.8.0
+pytest==8.3.4
+pytest-django==4.9.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
