added gunicorn in requirements

--- a/insure_app/requirements.txt
+++ b/insure_app/requirements.txt
@@ -20,6 +20,7 @@ drf-yasg==1.21.8
 exceptiongroup==1.2.2
 Faker==33.1.0
 filelock==3.16.1
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 iniconfig==2.0.0
